--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             /></a>
           </li>
           <li>
-            <a class="resume" href="image/resume.jpg">Resume</a>
+            <a class="resume" href="https://tinyurl.com/4u8nb6hh">Resume</a>
           </li>
           <li><a class="about" href="about.html">About Me</a></li>
           <li><a class="skills" href="project.html">Projects</a></li>
